# claude-terminal-home-assistant

./: .gitignore  .hadolint.yaml  .release-please-manifest.json  .shellcheckrc  .trivy.yaml  .trivyignore  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  MAC_CLIPBOARD_MONITOR.md  README.md  flake.nix  release-please-config.json  renovate.json  repository.yaml  ruff.toml  test-image-service-integration.sh  test-wrapper-integration.sh
.github/: LINTING.md
.github/workflows/: auto-release.yml  build-addon.yml  claude-code-review.yml  claude.yml  lint.yml  publish.yml  release-please.yml  security.yml  test.yml
claude-terminal/: CHANGELOG.md  DOCS.md  Dockerfile  IMAGE_PASTE.md  PERSISTENT_PACKAGES.md  README.md  build.yaml  config.yaml  run.sh
claude-terminal/.claude/skills/persistent-package-manager/: SKILL.md
claude-terminal/ha-mcp/: pyproject.toml
claude-terminal/image-service/: package-lock.json  package.json  server.js
claude-terminal/image-service/public/: index.html
claude-terminal/scripts/: claude-auth-helper.sh  claude-session-picker.sh  ha-api-examples.sh  health-check.sh  install-ha-cli.sh  persist-install  persistent-packages.sh  setup-ha-mcp.sh  tmux.conf
claude-terminal/wrapper/: eslint.config.js  package-lock.json  package.json  server.js
claude-terminal/wrapper/public/: index.html  login-link.js  manifest.json  offline.html  sw.js
claude-terminal/wrapper/test/: login-link.test.js
config/: README.md
docs/superpowers/specs/: 2026-03-10-security-testing-design.md
tools/: MAC_CLIPBOARD_MONITOR.md  README.md  mac-clipboard-monitor.py
